libs/@local/hashql/hir/tests/ui/lower/checking/closure-unconstrained.jsonc
//@ run: fail
//@ description: Closure inference
[
  "let",
  "add",
  [
    "fn",
    { "#tuple": ["T"] },
    { "#struct": { "a": "T", "b": "T" } },
    "T",
    ["+", "a", "b"]
  ],
  //~^ ERROR Type variable has incompatible equality and upper bound constraints
  ["add", { "#literal": "1" }, { "#literal": "2" }]
]
